@@ -86,7 +86,7 @@ public class SkipEmptyTagsFilter extends FullXmlFilter {
 			super.endElement(uri, localName, qName);
 			elementSkipped=false;
 		} else {
-			pendingElements.remove(pendingElements.size()-1);
+			pendingElements.removeLast();
 			pendingWhitespace.setLength(0);
 			elementSkipped=true;
 		}
@@ -131,7 +131,7 @@ public class SkipEmptyTagsFilter extends FullXmlFilter {
 	}
 
 	@Override
-	public void startPrefixMapping(String prefix, String uri) throws SAXException {
+	public void startPrefixMapping(String prefix, String uri) {
 		log.trace("startPrefixMapping({},{})", prefix, uri);
 		pendingNamespaceMappings.put(prefix, uri);
 	}
@@ -149,7 +149,7 @@ public class SkipEmptyTagsFilter extends FullXmlFilter {
 		if (pendingElements.isEmpty()) {
 			super.comment(ch, start, length);
 		} else {
-			pendingElements.get(pendingElements.size()-1).comments.write(ch,start,length);
+			pendingElements.getLast().comments.write(ch,start,length);
 		}
 	}
 
