@@ -1223,7 +1223,7 @@ public class ReceiverTest {
 		assertEquals(expectedBackoffDelayMs, actualBackoffDelay);
 		if (expectConfigWarning) {
 			assertEquals(1, configWarnings.size(), "There should have been exactly 1 config warning");
-			assertThat(configWarnings.get(0), containsString("Maximum backoff delay reduced"));
+			assertThat(configWarnings.getWarnings().getFirst(), containsString("Maximum backoff delay reduced"));
 		} else {
 			assertTrue(configWarnings.isEmpty(), "There should not have been any config warnings");
 		}
@@ -1254,7 +1254,7 @@ public class ReceiverTest {
 
 		// Act
 		for (int i = 0; i < 20; ++i) {
-			assertThrows(ListenerException.class, () -> receiver.processRequest(listener, new MessageWrapper<>(Message.nullMessage(), MessageUtils.generateMessageId("error-"), MessageUtils.generateMessageId()), new PipeLineSession()));
+			assertThrows(ListenerException.class, () -> receiver.processRequest(listener, new MessageWrapper<>(Message.nullMessage(), MessageUtils.generatePrefixedMessageId("error-"), MessageUtils.generateDefaultMessageId()), new PipeLineSession()));
 		}
 
 		// Assert
@@ -1272,7 +1272,7 @@ public class ReceiverTest {
 		reset(receiver);
 
 		// Act
-		receiver.processRequest(listener, new MessageWrapper<>(Message.nullMessage(), MessageUtils.generateMessageId("success-"), MessageUtils.generateMessageId()), new PipeLineSession());
+		receiver.processRequest(listener, new MessageWrapper<>(Message.nullMessage(), MessageUtils.generatePrefixedMessageId("success-"), MessageUtils.generateDefaultMessageId()), new PipeLineSession());
 
 		// Assert
 		// Verify that the backoff-delay has been reset after a successful request
@@ -1282,7 +1282,7 @@ public class ReceiverTest {
 		// Repeat the errors and verify error behaviour occurs again after errors
 		// Act
 		for (int i = 0; i < 20; ++i) {
-			assertThrows(ListenerException.class, () -> receiver.processRequest(listener, new MessageWrapper<>(Message.nullMessage(), MessageUtils.generateMessageId("error-"), MessageUtils.generateMessageId()), new PipeLineSession()));
+			assertThrows(ListenerException.class, () -> receiver.processRequest(listener, new MessageWrapper<>(Message.nullMessage(), MessageUtils.generatePrefixedMessageId("error-"), MessageUtils.generateDefaultMessageId()), new PipeLineSession()));
 		}
 
 		// Assert
