@@ -16,11 +16,11 @@
 package org.frankframework.extensions.sap.jco3.tx;
 
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
+import org.jspecify.annotations.Nullable;
 import org.springframework.transaction.support.ResourceHolderSupport;
 import org.springframework.util.Assert;
 
@@ -139,30 +139,28 @@ public class JcoResourceHolder extends ResourceHolderSupport {
 	}
 
 
-	public JCoDestination getDestination() {
+	public @Nullable JCoDestination getDestination() {
 		return !this.destinations.isEmpty() ? this.destinations.getFirst() : null;
 	}
 
-	public String getTid(JCoDestination destination) {
+	public @Nullable String getTid(JCoDestination destination) {
 		Assert.notNull(destination, "Destination must not be null");
 		List<String> tids = this.tidsPerDestination.get(destination);
 		if (tids==null) {
 			return null;
 		}
-		return tids.get(tids.size()-1);
+		return tids.getLast();
 	}
 
 
 	public void commitAll() throws SapException {
-		for (Iterator<JCoDestination> itc = this.destinations.iterator(); itc.hasNext();) {
-			JCoDestination destination = itc.next();
+		for (JCoDestination destination : this.destinations) {
 			List<String> tids = this.tidsPerDestination.get(destination);
-			for (Iterator<String> itt = tids.iterator(); itt.hasNext();) {
-				String tid = itt.next();
+			for (String tid : tids) {
 				try {
 					destination.confirmTID(tid);
 				} catch (Throwable t) {
-					throw new SapException("Could not confirm TID ["+tid+"]");
+					throw new SapException("Could not confirm TID [" + tid + "]");
 				}
 			}
 		}
